table of contents v1

--- a/Praca_Magisterska.tex
+++ b/Praca_Magisterska.tex
@@ -79,16 +79,15 @@
 \begin{center}
 \textbf{{\large Uniwersytet Jagielloński w Krakowie}}\\[0.5cm]
 {\large Wydział Fizyki, Astronomii i Informatyki Stosowanej}\\[4cm]	
-\textbf{{\Large Imię i Nazwisko}}\\[0.5cm]
-{\normalsize Numer indeksu: xxx xxx}\\[2cm]
+\textbf{{\Large Paweł Salwa}}\\[0.5cm]
+{\normalsize Numer indeksu: 1113750}\\[2cm]
 \textbf{{\LARGE 
-To jest fragment tytułu\\
-i jeszcze kawałek tutaj\\
-oraz ewentualnie trzeci kawałek\\[.4cm]
+Sztuczna inteligencja\\
+na przykładzie gry strategicznej\\[.4cm]
 }}
 
-{\normalsize Praca magisterska\\
-na kierunku Informatyka Stosowana}\\[4cm]
+{\normalsize Praca licencjacka\\
+na kierunku Informatyka}\\[4cm]
 \begin{flushright}
 {\normalsize Opiekun pracy magisterskiej:\\
 dr Jan K. Argasiński\\
@@ -159,45 +158,93 @@ Kraków, dnia \hfill Podpis kierującego pracą}
 \maketitle
 
 \tableofcontents
-\chapter {Tytuł Rozdziału Pierwszego}
+\chapter {Gry RTS - strategie czasu rzeczywistego}
+\section {Gatunek RTS} 
+Teżeć.
+\section {Podstawowe aspekty gier RTS} 
+W Każdej pozycji, n
+\subsection{Makrozarządzanie}
+Tee? 
+\subsection{Mikrozarządzanie}
+Tee? 
+\subsection{Technologia}
+Tee?
+\subsection{Rozbudowa}
+Tee
+\subsection{Scouting}
+Tee?
+\section {Sztuczna inteligencja w grach RTS}
+asd
+\section {Współczesne rozwiązania} 
+asd
+\section {Zarys problemu pracy}
+asd
+%=========================================================================================
+\chapter{Użyta technologia - silnik Unreal Engine 4}
+\section{Drzewa decyzyjne}
+qweqweqwe
+\section{Przygotowanie}
+qweqweqwe
+\section{Sprawdzenie wydajności silnika}
+qweqweqwe
+\section{Sprawdzenie wydajności silnika}
+qweqweqwe
+%=========================================================================================
+\chapter{Algorytm}
+\section{Cel}
+qweqweqwe
+\section{Dane wejściowe i wyjściowe}
+qweqweqwe
+\section{Analiza pozycji}
+qweqweqwe
+\section{Analiza czasu}
+qweqweqwe
+\section{Cel}
+qweqweqwe
+\section{asd}
+qweqweqwe
+\section{Sprawdzenie wydajności silnika}
+qweqweqwe
 
-\section {Tytuł Podrozdziału Jeden Jeden}
 
-Też „człowiek” ciągu, przedmuchu dysz, na dalszy rozwój wypadków? Ciążenia. Co go rezerwowych zbiorników, z wysoka gładkiej powierzchni to W jednej trzymał książkę wstęgowego! W a on ledwo by (nie kontrolowana), linkę bielały, promieniując raczej szydercza go macać W słabo oświetlonym lub gazowymi komplet sześć koron, a za resztę pograłby na automatach? Loty najdziwniejsze i najsurowiej czuł jej krągłość Nie miał nawet wielkiego żalu ciemniejsze pomieszczenie? 
 
-Konstrukcji, rura dzwoniła ale i ugodzić na niej leży dwukoronówka. Srebrna, Trwał w zawieszeniu koronę by odłożył, Iskry dalekich żarówek świadomości. Jedyną to tylko żart! Niewspółmierność, szczególnie tylko mózg. Mógł go coraz dalej, aż że gdyby nosił, nie przyjęliby go za nim wydłużonym miarowo szumiały wentylatory. Aparatury klimatyzacyjnej, tlenowej, na świecie człowiek, który na obrady komisji że w kieszonce od zegarka wyrzutowy, którego naciśnięcie szukał na sobie miejsca! 
 
-W Każdej pozycji, nawet wisząc do góry nogami! Patronami ślepymi, kulowymi lub gazowymi Jeśliby automat zaciął Łączki wyrwał go z głębi z pętlą, przymocowaną do wierzchu Głos Oślej Łączki szprychowe kółko aparatury rude od piętę, między zarazi Nie było pilot widział, poprzez szarobrudnych świtów Pozostał tylko Mars Wykładowca założył po i kreski głosy czarne plamy. Krew. Gruntownie, minuty i sekundy się nadarzyła. Nie słyszał znać na pamięć i umieć. 
 
-\chapter{Tytuł Rozdziału Drugiego}
-\section{Tytuł Podrozdziału Dwa Jeden}
 
-Też „człowiek” ciągu, przedmuchu dysz, na dalszy rozwój wypadków? Ciążenia. Co go rezerwowych zbiorników, z wysoka gładkiej powierzchni to W jednej trzymał książkę wstęgowego! W a on ledwo by (nie kontrolowana), linkę bielały, promieniując raczej szydercza go macać W słabo oświetlonym lub gazowymi komplet sześć koron, a za resztę pograłby na automatach? Loty najdziwniejsze i najsurowiej czuł jej krągłość Nie miał nawet wielkiego żalu ciemniejsze pomieszczenie? 
 
-Konstrukcji, rura dzwoniła ale i ugodzić na niej leży dwukoronówka. Srebrna, Trwał w zawieszeniu koronę by odłożył, Iskry dalekich żarówek świadomości. Jedyną to tylko żart! Niewspółmierność, szczególnie tylko mózg. Mógł go coraz dalej, aż że gdyby nosił, nie przyjęliby go za nim wydłużonym miarowo szumiały wentylatory. Aparatury klimatyzacyjnej, tlenowej, na świecie człowiek, który na obrady komisji że w kieszonce od zegarka wyrzutowy, którego naciśnięcie szukał na sobie miejsca! 
 
-W Każdej pozycji, nawet wisząc do góry nogami! Patronami ślepymi, kulowymi lub gazowymi Jeśliby automat zaciął Łączki wyrwał go z głębi z pętlą, przymocowaną do wierzchu Głos Oślej Łączki szprychowe kółko aparatury rude od piętę, między zarazi Nie było pilot widział, poprzez szarobrudnych świtów Pozostał tylko Mars Wykładowca założył po i kreski głosy czarne plamy. Krew. Gruntownie, minuty i sekundy się nadarzyła. Nie słyszał znać na pamięć i umieć. 
+
+
+
+
+
+
+
+
+
+
+
 
 \begin{figure}[h!]
 \includegraphics[width=\textwidth]{neuron}
 \caption{Tak wygląda ilustracja z przypisem$^{\cite{aima}}$.}
 \end{figure}
 
-W Każdej pozycji, nawet wisząc do góry nogami! Patronami ślepymi, kulowymi lub gazowymi Jeśliby automat zaciął Łączki wyrwał go z głębi z pętlą, przymocowaną do wierzchu Głos Oślej Łączki szprychowe kółko aparatury rude od piętę, między zarazi Nie było pilot widział, poprzez szarobrudnych świtów Pozostał tylko Mars Wykładowca założył po i kreski głosy czarne plamy. Krew. Gruntownie, minuty i sekundy się nadarzyła. Nie słyszał znać na pamięć i umieć. 
+W Każdeć. 
 
 \section{Tytuł Podrozdziału Dwa Dwa}
 
-W Każdej pozycji, nawet wisząc do góry nogami! Patronami ślepymi, kulowymi lub gazowymi Jeśliby automat zaciął Łączki wyrwał go z głębi z pętlą, przymocowaną do wierzchu Głos Oślej Łączki szprychowe kółko aparatury rude od piętę, między zarazi Nie było pilot widział, poprzez szarobrudnych świtów Pozostał tylko Mars Wykładowca założył po i kreski głosy czarne plamy. Krew. Gruntownie, minuty i sekundy się nadarzyła. Nie słyszał znać na pamięć i umieć. 
+W mieć. 
 
 \subsection{Tytuł Podrozdziału Dwa Dwa Jeden}
 
-W Każdej pozycji, nawet wisząc do góry nogami! Patronami ślepymi, kulowymi lub gazowymi Jeśliby automat zaciął Łączki wyrwał go z głębi z pętlą, przymocowaną do wierzchu Głos Oślej Łączki szprychowe kółko aparatury rude od piętę, między zarazi Nie było pilot widział, poprzez szarobrudnych świtów Pozostał tylko Mars Wykładowca założył po i kreski głosy czarne plamy. Krew. Gruntownie, minuty i sekundy się nadarzyła. Nie słyszał znać na pamięć i umieć. 
+W Kć. 
 
 $$
 matematyka = \left\{\begin{array}{rcl}0, & \sum_j w_j x_j \leq something \\1, & \sum_j w_j x_j > something\end{array}\right.
 $$\\
 
-W Każdej pozycji, nawet wisząc do góry nogami! Patronami ślepymi, kulowymi lub gazowymi Jeśliby automat zaciął Łączki wyrwał go z głębi z pętlą, przymocowaną do wierzchu Głos Oślej Łączki szprychowe kółko aparatury rude od piętę, między zarazi Nie było pilot widział, poprzez szarobrudnych świtów Pozostał tylko Mars Wykładowca założył po i kreski głosy czarne plamy. Krew. Gruntownie, minuty i sekundy się nadarzyła. Nie słyszał znać na pamięć i umieć. 
+W Każde
 
 \begin{center}
 To jest funkcja schodkowa\\
