info o grach RTS - wstęp

--- a/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
+++ b/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
@@ -165,7 +165,13 @@ Kraków, dnia \hfill Podpis kierującego pracą}
 %======================================title=================================================
 \tableofcontents
 \chapter {Gry RTS - strategie czasu rzeczywistego}
-\section {Gatunek RTS}  
+\section {Gatunek RTS}
+Gatunek RTS dotyczy wszelakich gier, gdzie gracza do zwycięstwa prowadzą decyzje strategiczne, a wszystkie one muszą zostać podjęte w ograniczonym czasie rzeczywistym, na bieżąco podczas rozgrywki. Gry tego typu najczęściej zostają stworzone na trzy sposoby: 
+\begin{itemize}
+\item[--] jako symulacje bitew i wojen z widokiem 'z lotu ptaka', gdzie gracz zarządza jednostkami, wydając im rozkazy. Bitwy takie są zwykle urozmaicane przez dodanie unikalnych umiejętności jednostek, zróżnicowaną efektywność danego rodzaju jednostek przeciwko różnym rodzajom innych jednostek, różne zadania, które są niezależne od wyniku bitew, lecz innych, bardziej ciekawych osiągnięć, które wpływają pozytywnie na odczucia gracza (w produkcji oprogramowania tzw. "user experience").
+\item[--] jako symulacja ekonomiczna - w tym przypadku mamy do czynienia z zaimplementowaniem przeróżnych modeli ekonomicznych i zasad rynkowych, gdzie gracz poprzez inwestycje i handel jest w stanie pomnażać majątek, surowce i wszelakie inne zmienne liczbowe lub zdobywać zadane przez twórców osiągnięcia. Przykładem takich modeli mogą być zasady giełdy. Gry takie również często posiadają widok 'z lotu ptaka' na mapę ekonomiczną, jednak kluczowy jest w nich interfejs, na którym twórcy muszą przejrzyście przedstawić całą gamę zmiennych zależnych od siebie, spekulowane ich zmiany oraz multum przycisków do kontrowania tych zmiennych - decyzje gracza.
+\item[--] jako kombinacja dwóch powyższych - w grach takich stosuje się zwykle mniejszy interfejs dotyczący części ekonomicznej, a większą część ekranu zajmuje pole bitwy. Gracz jednocześnie musi podejmować decyzje dotyczące ekonomii, a jednostki i bitwy ich dotyczące mogą być traktowane zwykle jako jedna ze zmiennych ekonomicznych - inwestycja w wojsko.
+\end{itemize} 
 Ominę w niniejszej pracy aspekty gier RTS takie jak: makrozarządzanie, technologia, rozbudowa, scouting. Zajmę się w szczególności tematem mikrozarządzania jednostkami. 
 \section {Mikrozarządzanie jednostkami} 
 asd
