--- a/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
+++ b/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
@@ -169,7 +169,7 @@ Kraków, dnia \hfill Podpis kierującego pracą}
 Gatunek RTS dotyczy wszelakich gier, gdzie gracza do zwycięstwa prowadzą decyzje strategiczne, a wszystkie one muszą zostać podjęte w ograniczonym czasie rzeczywistym, na bieżąco podczas rozgrywki. Gry tego typu najczęściej zostają stworzone na trzy sposoby: 
 \begin{itemize}
 \item[--] jako symulacje bitew i wojen z widokiem 'z lotu ptaka', gdzie gracz zarządza jednostkami, wydając im rozkazy. Bitwy takie są zwykle urozmaicane przez dodanie unikalnych umiejętności jednostek, zróżnicowaną efektywność danego rodzaju jednostek przeciwko różnym rodzajom innych jednostek, różne zadania, które są niezależne od wyniku bitew, lecz innych, bardziej ciekawych osiągnięć, które wpływają pozytywnie na odczucia gracza (w produkcji oprogramowania tzw. "user experience").
-\item[--] jako symulacja ekonomiczna - w tym przypadku mamy do czynienia z zaimplementowaniem przeróżnych modeli ekonomicznych i zasad rynkowych, gdzie gracz poprzez inwestycje i handel jest w stanie pomnażać majątek, surowce i wszelakie inne zmienne liczbowe lub zdobywać zadane przez twórców osiągnięcia. Przykładem takich modeli mogą być zasady giełdy. Gry takie również często posiadają widok 'z lotu ptaka' na mapę ekonomiczną, jednak kluczowy jest w nich interfejs, na którym twórcy muszą przejrzyście przedstawić całą gamę zmiennych zależnych od siebie, spekulowane ich zmiany oraz multum przycisków do kontrowania tych zmiennych - decyzje gracza.
+\item[--] jako symulacja ekonomiczna - w tym przypadku mamy do czynienia z zaimplementowaniem przeróżnych modeli ekonomicznych i zasad rynkowych, gdzie gracz poprzez inwestycje i handel jest w stanie pomnażać majątek, surowce i wszelakie inne zmienne liczbowe lub zdobywać zadane przez twórców osiągnięcia. Przykładem takich modeli mogą być zasady giełdy lub zależności krzywych popytu i podaży dla różnych surowców. Gry takie również często posiadają widok 'z lotu ptaka' na mapę ekonomiczną, jednak kluczowy jest w nich interfejs, na którym twórcy muszą przejrzyście przedstawić całą gamę zmiennych zależnych od siebie, spekulowane ich zmiany oraz multum przycisków do kontrowania tych zmiennych - decyzje gracza.
 \item[--] jako kombinacja dwóch powyższych - w grach takich stosuje się zwykle mniejszy interfejs dotyczący części ekonomicznej, a większą część ekranu zajmuje pole bitwy. Gracz jednocześnie musi podejmować decyzje dotyczące ekonomii, a jednostki i bitwy ich dotyczące mogą być traktowane zwykle jako jedna ze zmiennych ekonomicznych - inwestycja w wojsko.
 \end{itemize} 
 Niniejsza praca powstała na podstawie gry strategicznej, która jest symulacją bitwy pomiędzy jednym graczem, a komputerem. Pominąłem w niej aspekty gier RTS takie jak: makrozarządzanie, technologia, rozbudowa, scouting. Zajmę się natomiast w szczególności tematem mikrozarządzania jednostkami. 
@@ -184,7 +184,7 @@ Jednzm z wielu zadań dla gracza gry RTS jest mikrozarządzanie jednostkami. Pol
 \item[--] aktywne - te natomiast wymagają bezpośredniej akcji gracza - kolejnego konkretnego rodzaju rozkazu, który urozmaica strategie i wyniki walki 
 \end{itemize} 
 
-Zdolności takie są szczególnie wymagające i udowadniają, że poza strategicznymi aspektami bitwy, można do gry dodać także aspekty takie jak: zręczność lub refleks.
+Zdolności takie są szczególnie wymagające i udowadniają, że poza strategicznymi aspektami bitwy, można do gry dodać także aspekty takie jak: zręczność lub refleks wymagane od gracza.
 
 Innym popularnym czynnikiem komplikującym wyniki bitew jest przewaga danego rodzaju jednostki nad innym. Jeżeli zarówno gracz jak i jego przeciwnik posiadają kilka rodzajów jednostek oraz obaj próbują zaatakować wykorzystując tę przewagę, to pole bitwy staje się bardzo skomplikowaną 'szachownicą' podatną na efekt motyla. Może być to bardzo łatwo implementowane i balansowane sukcesywnie lub według modeli matematycznych doputy, dopuki będzie zgodnie z docelowym 'user experience'.
 
@@ -194,13 +194,19 @@ Jako, że każda gra może pominąć niektóre popularne aspekty gier RTS, proje
 %====================================== AI W RTS ======================================
 \section {Sztuczna inteligencja w grach RTS}
 Podczas projektowania AI w grach często spotykanym rozwiązaniem jest stworzenie systemu, który niekoniecznie poprawnie symuluje decyzje człowieka, ale raczej skupia się na odczuciach gracza i pozytywnym odbiorze gry przez niego. Okazuje się to szczególnie uproszczone przy zastosowaniu drzew decyzyjnych. Współczesne silniki posiadają wbudowane narzędzia do implementacji tego typu rozwiązań oraz całą gamę assetów i tool'ów utworzonych przez społeczność game developerską. Sprawdza się to głównie dlatego, że bardzo łatwo wyobrazić sobie i zasymulować decyzje komputera przy pomocy maszyny stanów. Drzewa decyzyjne umożliwiają łatwą implementację zachowań dla różnych stanów oraz przejść pomiędzy nimi na podstawie zmiennych w czasie rzeczywistym warunków. 
+
+
+tu wiecej info o temacie trzeba
+
+
+asd
 %====================================== Współczesne rozwiązania=================================
 \section {Współczesne rozwiązania} 
-Ponieważ maszyny stanów mogą bardzo dokładnie symulować pewne sekwencyjne, zdefiniowane i powtarzające się akcje, sprawdzają się one bardzo dobrze w sytuacjach, gdzie gracz jest prowadzony przez rozgrywkę według planu twórców. Dlatego też misje, mapy w grach łatwo można oskryptować według wymyślonego modelu przy pomocy drzew decyzyjnych. Dotyczy to zwykle rutynowych akcji wykonywanych przez sztuczną inteligencję. Przykładem może być atak, wysłanie zwiadu, wybudowanie budynku lub zakup surowców raz na określony czas. Takie rozwiązanie jest bardzo łatwe do modelowania i testowania. Dzięki temu programista może łatwo dopasować implementację do zaprojektowanego modelu. 
+Gdy mamy do czynienia z grą typu szachy - gdzie dwóch graczy o równych szansach startuje do walki, algorytmy AI muszą być bardzo skomplikowane i poprawnie wartościować poszczególne decyzje. Gdy gra polega raczej na przechodzeniu kolejnych misji optymalnym rozwiązaniem jest oskryptowanie każdej. Ponieważ maszyny stanów mogą bardzo dokładnie symulować pewne sekwencyjne, zdefiniowane i powtarzające się akcje, sprawdzają się one bardzo dobrze w sytuacjach, gdzie gracz jest prowadzony przez rozgrywkę według planu twórców. Dlatego też misje, mapy w grach łatwo można oskryptować według wymyślonego modelu przy pomocy drzew decyzyjnych. Dotyczy to zwykle rutynowych akcji wykonywanych przez sztuczną inteligencję. Przykładami mogą być: atak, wysłanie zwiadu, wybudowanie budynku lub zakup surowców raz na określony czas. Takie rozwiązanie jest bardzo łatwe do modelowania i testowania. Dzięki temu programista może łatwo dopasować implementację do zaprojektowanego modelu. 
 
-Problem rośnie jednak, gdy model gry pozwala na coraz więcej możliwych decyzji do podjęcia i sztuczna inteligencja musi raczej odpowiadać na dane nawet parudziesięciokrotnie w ciągu każdej sekundy, niż egzekwować kolejne rozkazy z oskryptowanej mapy. Wtedy stosowanym rozwiązaniem może być sieć neuronów.
+Problem rośnie jednak, gdy model gry pozwala na coraz więcej możliwych decyzji do podjęcia i sztuczna inteligencja musi raczej odpowiadać na dane nawet parudziesięciokrotnie w ciągu każdej sekundy, niż egzekwować kolejne rozkazy z oskryptowanej mapy. Wtedy właśnie stosowanym rozwiązaniem może być sieć neuronów.
 
-Dzięki możliwości analizy milionów strategii, sieci neuronowe okazały się być wyzwaniem nawet dla profesjonalnych graczy. Współczesne boty stworzone do grania w popularną grę rywalizacyjną Starcraft mając okazję zmierzyć się z mistrzami świata, przegrywały zwykle z niewielką przewagą ludzi.
+Dzięki możliwości analizy milionów strategii, sieci neuronowe okazały się być wyzwaniem nawet dla profesjonalnych graczy. Współczesne boty stworzone do grania w popularną grę rywalizacyjną Starcraft mając okazję zmierzyć się z mistrzami świata, wciąż przegrywały zwykle z niewielką jednak przewagą ludzi.
 
 %======================================Zarys problemu pracy======================================
 \section {Zarys problemu pracy}
@@ -215,10 +221,10 @@ Tak więc dążymy do takiego zarządzania jednostkami, aby w trakcie bitwy zmin
 \item[--] rozmieszczenie wojsk tak, aby jednostki w swoim zasięgu walki posiadały przewagę liczebną.
 \end{itemize}
 
-Są to rozwiązania sprawdzone i stosowane przez współczesnych profesjonalnych graczy. Dotychczas nie są jednak one zaimplementowane do sztucznych inteligencji występujących we współczesnych grach  RTS. Celem projektu dołączonego do niniejszej pracy jest stworzenie gry, posiadającej podstawowe mechaniki zarządzaia jednostkami z gier typu RTS wraz ze sztuczną inteligencją imitującą wydawanie powyżej wymienionych rozkazów.
+Są to rozwiązania sprawdzone i stosowane przez współczesnych profesjonalnych graczy. Dotychczas zbyt przesadne - chodź wartościowe - mikrozarządzanie przez boty nie jest zaimplementowane do sztucznych inteligencji występujących we współczesnych grach  RTS. Celem projektu dołączonego do niniejszej pracy jest stworzenie gry, posiadającej podstawowe mechaniki zarządzaia jednostkami z gier typu RTS wraz ze sztuczną inteligencją imitującą wydawanie powyżej wymienionych rozkazów.
 
 
-Ponieważ symulacje bitew w grach tego rodzaju są często uproszczone i bierze w nich udział kilkanaście do maksymalnie kilkudziesięciu jednostek, człowiek ze swoim refleksem jest w stanie efektywnie zarządzać każdą posiadaną jednostką. Jest to dopasowane do przeciętnego, niepoczątkującego gracza, którego wskaźnik APM - akcji na minutę (ang. APM - Actions Per Minute) wynosi około 100 - 140. Warto nadmienić, że profesjonalni gracze, osiągający wskaźnik APM równy nawet ponad 250, nie wykorzystają w tak prostej grze swojego potencjału.
+Ponieważ symulacje bitew w grach tego rodzaju są często uproszczone i bierze w nich udział kilkanaście do maksymalnie kilkudziesięciu jednostek, człowiek ze swoim refleksem jest w stanie efektywnie zarządzać każdą posiadaną jednostką. Jest to dopasowane do przeciętnego, niepoczątkującego gracza, którego wskaźnik APM - akcji na minutę (ang. APM - Actions Per Minute) wynosi około 100 - 140. Warto nadmienić, że profesjonalni gracze, osiągający wskaźnik APM równy nawet ponad 250, nie wykorzystają w tak prostej grze swojego potencjału z powodu mocno ogarniczonej ilości rodzajów rozkazów.
 
 
 
@@ -226,7 +232,7 @@ Ponieważ symulacje bitew w grach tego rodzaju są często uproszczone i bierze 
 %=========================================================================================
 \chapter{Użyta technologia - silnik Unreal Engine 4}
 
-Unreal Engine 4 jest rzadko wykorzystywany we współczesnej branży wytwarzania gier komputerowych do tworzenia gier typu RTS. Jest to głównie podyktowane trendami, rzadziej, lecz również powodami związanymi z optymalizacją. Większość podstawowych assetów i szablonów projektów są przygotowane, aby dać podstawy grom poniższych typów:
+Unreal Engine 4 jest rzadko wykorzystywany we współczesnej branży wytwarzania gier komputerowych do tworzenia gier typu RTS. Jest to głównie podyktowane trendami. Rzadziej - lecz również - powodami związanymi z optymalizacją. Większość podstawowych assetów i szablonów projektów są przygotowane, aby dać podstawy grom poniższych typów:
 \begin{itemize}
 \item[--] FPS (ang. First Person Shooter) - strzelanka pierwszoosobowa
 \item[--] akcji
@@ -237,11 +243,11 @@ Unreal Engine 4 jest rzadko wykorzystywany we współczesnej branży wytwarzania
 \item[--] wszelakie rodzaje gier z widokiem trzeciej osoby - TPP (ang. Third Person Perspective)  
 \end{itemize}
 
-
-
 Nie oznacza to jednak, że silnik ten nie jest lub nie może zostać wykorzystywany do gier RTS. Jedynym ograniczeniem jest wydajność, wszystkie aspekty i implementacje typowe dla tego gatunku gier jesteśmy w stanie osiągnąć używając Unreal Engine 4. 
 
-W niniejszej pracy użytych zostało wiele darmowych assetów udostępnianych przez twórców silnika. Przy wielu z nich koniecznym było skorzystanie z możliwości dziedziczenia po natywnych dla silnika klasach C++. Dyktowane było to potrzebą rozszerzenia 
+W niniejszej pracy nie zajmowałem się tematem optymalizacji związanej z modelami 3D, a użytych zostało wiele darmowych assetów udostępnianych przez twórców silnika. Nie są one zatem poprawnie przystosowane do gry RTS. Dla uproszcznia w modelach projektu ominąłem optymalizację z systemem LOD (Ang. Level Of Detail - zmienny poziom dokładności modeli w zależności od odległości). 
+
+Przy wielu natywnych assetach koniecznym było skorzystanie z możliwości dziedziczenia po natywnych dla silnika klasach C++. Dyktowane było to potrzebą rozszerzenia ich o funkcjonalność związaną z grami RTS, których - jak nadmieniłem wcześniej - nie posiadają podstawowe szablony silnika.
 
 
 Test wydajności będzie również zawarty w niniejszej pracy.
@@ -254,7 +260,7 @@ Hierarchia dziedziczenia klas w projekcie jest zaprojektowana tak, aby użyć mo
 
 Ponieważ potrzebne jest, aby instancjować wiele obietów tej klasy, zgodnie z zasadą działania silnika musi być ona assetem typu Blueprint Class. Funkcjonalność tej klasy podzielona jest dzięki chierarchii dziedziczenia na dwa dedykowane dla projektu pliki: 
 \begin{itemize}
-\item[--] AMyCharacter.h - zawierającą klas C++
+\item[--] AMyCharacter.h - zawierającą klasę C++
 \item[--] BPSalwusUnit - klasa Blueprint umożliwiająca wielokrotne instancjowanie jednostek w poziomach w silniku
 \end{itemize}
 
@@ -350,10 +356,55 @@ Ponieważ, głównym elementem którym w grze potrzeba poruszać w zależności 
 
 TUTAJ WIECEJ INFO O POSZCZEGOLNCYH FUNKCJACH CAMERAPAWNCONTROLLER'a
 
+\subsection{Ruch kamery}
 
+Klasa Blueprint CameraPawnController zawiera w sobie obsługę ruchu kamery. Odpowiedzialne są za to funkcje MovementX i MovementY. Zmieniają one wektor Location zawarty w komponencie Transform kamery odpowiednio w osiach X i Y. Szybkość tej zmiany jest zależna od dwóch zmiennych typu float: 
+\begin{itemize}
+\item[--] MouseMoveMultiplier - którą programista może dowolnie zmienić z poziommu edytora UE4
+\item[--] MoveSensitivity - ta z kolei jest wyliczana na podstawie obecnej odległości kamery od ziemi. Odległość tą możemy otrzymać ze zmiennej TargetArmLength będącej w komponencie SpringArm. Jest ona dzielona przez 50 i następnie zatrzaskiwana pomiędzy wartością minimalną 0,5 i maksymalną 30. Podane dane liczbowe otrzymałem na podstawie prób i błędów. Ustawione są tak, aby gracz mógł swobodnie poruszać kamerą gdy jest przybliżona - tzn. gdu zmienna TargetArmLength ma relatywnie małą   wartość - wtedy prędkość poruszania się kamery jest odpowiednio mniejsza. Dzięki zatrzaśnięciu wyniku dzielenia TargetArmLength przez 50 Zapobiega zbyt wolnemu lub zbyt szybkiemu ruchowi kamery.
+\end{itemize}
+
+
+
+Funkcje MovementX i MovementY mogą być wywołane za pośrednictwem dwóch akcji:
+
+\begin{itemize}
+\item[--] przeciągnięcie kursora myszy do krawędzi ekranu - po otrzymaniu obecnej pozycji kursora - przy pomocy funkcji GetCursorPosition() - dzielimy jej poszczególne składowe przez odpowiednie składowe funkcji GetViewportSize() i następnie sprawdzamy, czy wynik dzielenia jest większy niż 0,975 lub mniejszy niż 0,025. Jeżeli sprawdzenie da wynik pozytywny, wywołujemy odpowiednią z dwóch funkcji: MovementX lub MovementY, w zależności, czy kursor jest w pobliżu krawędzi pionowych czy też poziomych. W ogólności oznacza to, że gdy kursor znajdzie się w 0,025 szerokości lub wysokości ekranu, następuje ruch kamery. 
+\item[--] kliknięcie jednego spośród przycisków : 'w', 'a', 's', 'd'. W ustawieniach projektu w dziale 'input' przyciski 'w' i 's' zmapowane są do jednej osi nazwanej 'MoveForward', a 'a' i 'd' do drugiej osi nazwanej 'MoveRight'. Do tak zmapowanych przycisków możemy odnieść się w klasach Blueprint przy pomocy eventów InputAxisMoveForward oraz InputAxisMoveRight. Event taki daje nam wartość AxisValue równą 1 lub -1 w zależności od przycisku, który wciśniemy (np. przycisk 'w' da nam wartość 1, gdy 's' wartość -1). Wartość ta następnie przekazywana jest do funkcji MovementX lub MovementY i następuje ruch kamery w oczekiwanym kierunku.
+\end{itemize}
+
+Wywołania funkcji i obsługa eventów umiejscowione są w zakładce 'Event Graph' klasy Blueprint 'BP CameraPawnController'.
+
+\subsection{Obsługa lewego przycisku myszy}
+
+Lewy przycisk myszy obsługuje algorytm napisany w całości używając Blueprintóww w pliku 'BP CameraPawnController'. Przycisk ten jest odpowiedzialny za zaznaczanie jednostki, gdy na nią klikniemy, lub zaznaczenie wielu jednostek, gdy po kliknięciu przeciągniemy mysz - tworząc przekątną prostokąta - i następnie puścimy przycisk. Wtedy zaznaczone zostają wszystkie jednostki, których model, czyli wielościan 3d znajduje się pod tworzonym przez zaznaczenie prostokątem. Prostokąt ten jest również rysowany na ekranie i podświetlany zielonym kolorem. Do jego narysowania używany jest tutaj plik BP\_MyHUD, czyli podstawowa klasa Blueprint odpowiedzialna za UI (ang. User Interface - interfejs użytkownia). W momencie puszczenia przycisku wywoływana jest funkcja 
+
+MyGetActorsInSelectionRectangle().
+\begin{lstlisting}[language=C++, backgroundcolor=\color{black!5}, basicstyle=\footnotesize, caption=Funkcja MyGetActorsInSelectionRectangle() w klasie MyHUD.]
+void AMyHUD::MyGetActorsInSelectionRectangle(TSubclassOf<class AActor> ClassFilter, const FVector2D& FirstPoint, const FVector2D& SecondPoint, TArray<AActor*>& OutActors)
+\end{lstlisting}
+
+Jest to funkcja zapisana w języku C++, wywoływana z poziomu Blueprint, dopasowana do projektu, która oryginalnie zawarta jest w pliku HUD.cpp. Po przekazaniu do niej kolejnych argumentów: 
+\begin{itemize}
+\item[--] klasy filtrującej - BP\_SalwusUnit
+\item[--] punktu początku zaznaczenia 
+\item[--] punktu końca zaznaczenia
+\end{itemize}
+
+i sprawdzeniu, czy zaznaczone jednostki należą do gracza (a nie do komputera) zapisujemy podanych aktorów w tablicy 'SelectedUnits'. Każde kolejne operacje - takie jak rozkaz ruchu, rozkaz ataku - możemy wykonywać dopiero wtedy, gdy przy pomocy lewego przycisku myszy zaznaczymy pewnych aktorów i zostaną oni zapisani w 'SelectedUnits'. 
+
+Ponadto podczas eventu puszczania lewego przycisku myszy wywoływay jest na każdej jednostce event 'HandleSelected', który na podstawie tego, czy jednostka została właśnie zaznaczaona ukazuje lub chowa komponent 'CursorToTheWorld' - czyli zieloną obręcz przy ziemi wokół jednostki. Dzięki temu w grze widoczne jest, które jednostki są aktualnie zaznaczone - tj. są zawarte w tablicy 'SelectedUnits'. Aby to osiągnąć, została użyta Blueprintowa funkcja SetHiddenInGame() wywoływana z odpowiednim argumentem typu bool.
+
+\subsection{Obsługa prawego przycisku myszy}
+Tak jak jest to wdrażane w większości gier RTS, tak i w moim projekcie prawy przycisk myszy służy, do wydannia jednostkom rozkazu ruchu. Wciśnięcie jego powoduje wywołanie w pętli na każdej jednostce zawartej w tablicy 'SelectedUnits' funkcji SimpleMoveToLocation()
+
+\begin{lstlisting}[language=C++, backgroundcolor=\color{black!5}, basicstyle=\footnotesize, caption=Funkcja SimpleMoveToLocation() w klasie UNavigationSystem.]
+void UNavigationSystem::SimpleMoveToLocation(AController* Controller, const FVector& GoalLocation)
+\end{lstlisting}
+Kontroler każdej jednostki przekazujemy przy każdej iteracji dzięki funkcji GetAiController. Pozostaje przekazać odpowiednią pozycję do powyższej funkcji. Wektor 3D wskazujące na miejsce docelowe ruchu otrzymany został przy pomocy struktury, którą zwraca funkcja GetHitResultUnderCursorByChannel(). 
 
 \section{Animacje}
-Wszystkie animacje użyte w niniejszym projekcie są darmowymi assetami i pochodzą z oficjalnego sklepu 'Epic Games marketplace'. Wszyskie one podpięte są do podstawowego manekina. Są one zarządzane przez plik Blueprint 'RTSUnitAnimBlueprint' i dotyczą tylko jednostki BP_SalwusUnit. Lista użytych animacji:
+Wszystkie animacje użyte w niniejszym projekcie są darmowymi assetami i pochodzą z oficjalnego sklepu 'Epic Games marketplace'. Wszyskie one podpięte są do podstawowego manekina. Są one zarządzane przez plik Blueprint 'RTSUnitAnimBlueprint' i dotyczą tylko jednostki BP SalwusUnit. Lista użytych animacji:
 \begin{itemize}
 \item[--] bezczynność 
 \item[--] bieg
