--- a/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
+++ b/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
@@ -255,7 +255,6 @@ Test wydajności będzie również zawarty w niniejszej pracy.
 %==================================BPSALWUS UNIT==========================================
 \section{Asset pojedynczej jednostki}
 
-
 Hierarchia dziedziczenia klas w projekcie jest zaprojektowana tak, aby użyć możliwie najwięcej poprawnych dla gier RTS rozwiązań udostępnianych przez twórców Unreal Engine 4. Jednostka - czyli zwykły 'żołnierz' - w naszej grze, jest zapisana pod postacią obiektu 'BP SalwusUnit'. Klasa tego obiektu dziedziczy po klasie SalwaRTS.MyCharacter.h
 
 Ponieważ potrzebne jest, aby instancjować wiele obietów tej klasy, zgodnie z zasadą działania silnika musi być ona assetem typu Blueprint Class. Funkcjonalność tej klasy podzielona jest dzięki chierarchii dziedziczenia na dwa dedykowane dla projektu pliki: 
@@ -266,6 +265,7 @@ Ponieważ potrzebne jest, aby instancjować wiele obietów tej klasy, zgodnie z 
 
 AMyCharacter.h - zawiera klasę dziedziczącą po Unrealowej klasie 'ACharacter'. Dzięki temu zachowania takie jak: ruch jednostki, atak jednostki, otrzymywanie obrażeń są już zaimplementowane przez twórców silnika. W niniejszym projekcie potrzebne było rozszerzenie jej o zachowania typowe dla gry RTS, oraz o esencje tematu pracy, czyli algorytmy sztucznej inteligencji. To klasa AMyCharacter, w pliku AMyCharacter.cpp zawiera implementacje wszystkich funkcji, których potrzebuje pojedyncza jednostka, aby podejmować decyzje związane ze sztuczną inteligencją.
 
+\subsection{Klasa AMyCharacter}
 Poniżej widoczny kod przedstawia pola klasy AMyCharacter:
 
 \begin{lstlisting}[language=C++, backgroundcolor=\color{black!5}, basicstyle=\footnotesize, caption=Publiczne pola klasy AMyCharacter]
@@ -295,7 +295,9 @@ public:
 Pola te są opatrzone makrami, które silnik wykorzystuje do odpowiedniej serializacji danych pomiędzy kodem, a samym edytorem. Jest to bardzo ważne, ponieważ dziedzicząca klasa Blueprint BPSalwusUnit musi mieć do nich dostęp, aby implemenotwać własną funkcjonalność w języku Blueprint. Zastosowanie poszczególnych pól jest następnujące:
 \begin{itemize}
 \item[--] TArray<AMyCharacter*> VisibleUnits; - Kluczowa tablica dynamiczna, służąca do przechowywania wszystkich jednostek przeciwnika, które są w zasięgu. Jest ona uzupełniana za każdym razem, gdy system kolizji w silniu wykryje kolizję niewidocznych sfer, które są przymocowane jako komponenty do każdej jednostki i odpowiadają za wykrywanie czy jednostki te stanowią dla siebie nawzajem zagrożenie. Tablica ta wykorzystywana jest w funkcjach algorytmu sztucznej inteligencji, aby znajdować środek zagrożenia oraz szacowany czas, jaki jednostka jest w stanie przetrwać przed śmiercią.
-\item[--] BPSalwusUnit
+\item[--] MaxHp, CurrentHp, CooldownBetweenAttacks, AttackDuration, DamagePerAttack - te zmienne typu float zdefiniowane są według zasady samodokumentującego się kodu i po przetłumaczeniu ich nazw jasno jest określone do czego używane są wartości, które przechowują. Regulują one podstawowe wielkości, które dzięki makrom silnika możemy edytować z poziomu edytora. Ten sposób projektowania jest pomocny na etapie tworzenia projektu, ponieważ nie trzeba kompilować całego kodu, aby uruchomić grę na innych ustawieniach. Może być to szczególnie przydatne, gdy wartości te chcemy dopasować do lepszego UX oraz do uzyskania balansu w grze.
+\item[--] bHasTargetToAttack, bIsAttacking, bCanAttack, bIsAlive,- zmienne typu boolean wykorzystywane przy podpinaniu animacji oraz w algorytmach związanych z wzajemnym atakowaniem jednostek.
+
 \end{itemize}
 
 
@@ -328,8 +330,26 @@ public:
 	bool CheckIfCanEscape();
 	void Escape();
 \end{lstlisting}
+Ich działanie będzie dokładnie opisane w rozdziale trzecim nieniejszej pracy, ponieważ bezpośrednio dotyczy tematu pracy i zasługuje na obszerne i odrębne wytłumaczenie.
 
+Funkcje napisane w C++ z pliku AMyCharacter.cpp wywoływane są zarówno z Blueprintu BP\_SalwusUnit jak i przez silnik. Unreal robi to za pośrednictwem funkcji Tick() wołanej przy każdej ramce oraz BeginPlay(), wołanej na początku rozgrywki, po włączeniu gry. Funkcja Tick jest natomiast punktem wyjścia dla algorytmu sztucznej inteligencji. 
+\begin{lstlisting}[language=C++, backgroundcolor=\color{black!5}, basicstyle=\footnotesize, caption= Funkcje wołane przez silnik w pliku AMyCharacter.h]
+void AMyCharacter::BeginPlay();
+void AMyCharacter::Tick(float DeltaTime);
+\end{lstlisting}
 
+\subsection{Zawartość ,,Event Graph" w BP\_SalwusUnit}
+W niniejszym podrozdziale opisane zostaną obsługi eventów dotyczących klasy Blueprint BP\_SalwusUnit. Podgląd algorytmów można otrzymać tylko otwierając plik w edytorze Unreal Engine 4. Algorytmy zawarte tutaj dotyczą obsługi kolizji, spawnowania kolejnych jednostek, animacji, ataku oraz śmierci jednostek. Jako, że każda jednostka posiada przymocowaną do siebie niewidoczną sferę, która wykrywa jednostki będące w zasięgu ataku, to przede wszystkim potrzebna jest obsługa dwóch eventów: OnComponentBeginOverlap i OnComponentEndOverlap. Obsługa ich wywołania jest następująca:
+\begin{itemize}
+\item[--] OnComponentBeginOverlap - Gdy inna jednostka zacznie kolidować z naszą, najpierw musimy sprawdzić, czy należy ona do gracza, czy do komputera. Gdy należy do tej samej drużyny, ignorujemy ją całkowicie. W przeciwnym przypadku dodajemy ją do tablicy VisibleUnits funkcją AddUnique(), która pozwala uniknąć zduplikowania tej samej jednostki w tej kolekcji i zapewnia, że każdy jej element jest unikalny. Na koniec musimy ustawić zmienną typu bool - bHasTargetToAttack na true, która będzie potrzebna w innych miejscach projektu do poprawnego działania algorytmów związanych z atakiem i obsługą animacji.
+\item[--] OnComponentEndOverlap - Na końcu kolizji usuwamy kolidującą jednostke z tablicy VisibleUnits. Analogicznie jak w evencie OnCompoenentBeginOverlap ustawiamy zmienną bHasTargetToAttack - tym razem na false - jednak tylko, jeżeli usunięta jednostka była ostatnią w tablicy.
+\end{itemize}
+
+Podczas wywoływania powyższych eventów wywoływana jest również Blueprintowa funkcja FindTargetToAttack(). Odpowiada ona za znalezienie nowego celu ataku (gdy obecny cel jest odpowiedni nic się nie zmienia) i umieszczenie referencji do niech w zmiennej typu BP\_SalwusUnit nazwanej UnitTargetToAttack. Jej wywołanie jest potrzebne znowu - w dwóch sytuacjach:
+\begin{itemize}
+\item[--] gdy obecny cel ataku zginie - wywołuje on wtedy event OnDeath. Ten z kolei jest przypisywany każdej widocznej jednostce i poza wywołaniem funkcji FindTargetToAttack(), nakazuje atak kolejnej jednostki (zostanie to wyjaśnione przy opisie eventu Attack)
+\item[--] żywy ucieknie poza zasięg (wywoływanie następuje zawsze w evencie OnComponentEndOverlap).
+\end{itemize}
 
 
 
@@ -594,7 +614,7 @@ FVector AMyCharacter::GetMiddleOfEnemies() {
 }
 \end{lstlisting}
 
-Algorytm w niej zawarty jest skonstruowany został na podstawie wzoru na szukanie środka masy punktów opisanych wektorami. Po wywołaniu tej funkcji na aktorze będącym instacją klasy AMyCharacter algorytm zadziała następująco:
+Algorytm w niej zawarty jest skonstruowany został na podstawie wzoru na szukanie środka masy punktów opisanych wektorami z tą różnicą, że każdemu elementowi przypisujemy wagę tym większą, im mniejsza jest jego odległość od wywołującego funkcję aktora. Z tego powodu wynik tego algorytmu nazwałem ,,odwrotną średnią ważoną dla wektorów". Po wywołaniu tej funkcji na aktorze będącym instacją klasy AMyCharacter algorytm zadziała następująco:
 najpierw dla każdej wrogiej jednostki z tablicy widocznych wrogów - ,,VisibleUnits" - obliczana jest jej waga zagrożenia. Waga ta, jest odwrotnością odległości wroga od naszej jednostki. Odległość tą otrzymamy wołając statyczną funkcję z wbudowanej do silnika klasy FVector:
 
 \begin{lstlisting}[language=C++, backgroundcolor=\color{black!5}, basicstyle=\footnotesize, caption=Deklaracja funkcji Dist() w klasie FVector]
